# morpheus-interoperability

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md
ccl/: CMakeLists.txt
ccl/examples/01_initialize/: CMakeLists.txt
ccl/examples/04_c_compatibility/: CMakeLists.txt
ccl/examples/05_Coo_Interface/: 05_Coo_Interface.c  CMakeLists.txt
ccl/examples/08_Vec_Interface/: CMakeLists.txt
ccl/src/: CMakeLists.txt  Fcl_C_Convert.hpp  Fcl_C_CooMatrix.hpp  Fcl_C_Copy.cpp  Fcl_C_CsrMatrix.cpp  Fcl_C_CsrMatrix.hpp  Fcl_C_DenseMatrix.hpp  Fcl_C_DiaMatrix.cpp  Fcl_C_Dot.hpp  Fcl_C_DynamicMatrix.cpp  Fcl_C_DynamicMatrix.hpp  Fcl_C_MirrorContainers.hpp  Fcl_C_Multiply.hpp  Fcl_C_Print.cpp  Fcl_C_Print.hpp  Fcl_C_Scan.hpp  Fcl_C_Types.hpp  Fcl_C_WAXPBY.hpp  Morpheus_Ccl.cpp  Morpheus_Ccl.hpp  Morpheus_Ccl_Convert.cpp  Morpheus_Ccl_Convert.hpp  Morpheus_Ccl_CooMatrix.cpp  Morpheus_Ccl_CooMatrix.hpp  Morpheus_Ccl_Copy.cpp  Morpheus_Ccl_Copy.hpp  Morpheus_Ccl_CsrMatrix.cpp  Morpheus_Ccl_CsrMatrix.hpp  Morpheus_Ccl_DenseMatrix.cpp  Morpheus_Ccl_DenseMatrix.hpp  Morpheus_Ccl_DenseVector.cpp  Morpheus_Ccl_DenseVector.hpp  Morpheus_Ccl_DiaMatrix.cpp  Morpheus_Ccl_DiaMatrix.hpp  Morpheus_Ccl_Dot.cpp  Morpheus_Ccl_Dot.hpp  Morpheus_Ccl_DynamicMatrix.cpp  Morpheus_Ccl_DynamicMatrix.hpp  Morpheus_Ccl_Macros.hpp  Morpheus_Ccl_MirrorContainers.cpp  (+12 more)
ccl/src/dev/: Morpheus_Ccl.hpp  Morpheus_Ccl_Convert.cpp  Morpheus_Ccl_Convert.hpp  Morpheus_Ccl_CooMatrix.cpp  Morpheus_Ccl_CooMatrix.hpp  Morpheus_Ccl_Copy.cpp  Morpheus_Ccl_Copy.hpp  Morpheus_Ccl_CsrMatrix.cpp  Morpheus_Ccl_CsrMatrix.hpp  Morpheus_Ccl_DenseMatrix.cpp  Morpheus_Ccl_DenseMatrix.hpp  Morpheus_Ccl_DenseVector.cpp  Morpheus_Ccl_DenseVector.hpp  Morpheus_Ccl_Dev.hpp  Morpheus_Ccl_DiaMatrix.cpp  Morpheus_Ccl_DiaMatrix.hpp  Morpheus_Ccl_Dot.cpp  Morpheus_Ccl_Dot.hpp  Morpheus_Ccl_DynamicMatrix.cpp  Morpheus_Ccl_DynamicMatrix.hpp  Morpheus_Ccl_MirrorContainers.cpp  Morpheus_Ccl_MirrorContainers.hpp  Morpheus_Ccl_Multiply.cpp  Morpheus_Ccl_Multiply.hpp  Morpheus_Ccl_Print.cpp  Morpheus_Ccl_Print.hpp  Morpheus_Ccl_Reduction.cpp  Morpheus_Ccl_Reduction.hpp  Morpheus_Ccl_WAXPBY.cpp  Morpheus_Ccl_WAXPBY.hpp
ccl/src/dev/fwd/: Morpheus_Ccl_Fwd_CooMatrix.hpp  Morpheus_Ccl_Fwd_CsrMatrix.hpp  Morpheus_Ccl_Fwd_DenseMatrix.hpp  Morpheus_Ccl_Fwd_DenseVector.hpp  Morpheus_Ccl_Fwd_DiaMatrix.hpp  Morpheus_Ccl_Fwd_DynamicMatrix.hpp
ccl/src/fwd/: Fcl_Fwd_C_DenseMatrix.hpp  Fcl_Fwd_C_DynamicMatrix.hpp  Morpheus_Ccl_Fwd_CooMatrix.hpp  Morpheus_Ccl_Fwd_CsrMatrix.hpp  Morpheus_Ccl_Fwd_DenseMatrix.hpp  Morpheus_Ccl_Fwd_DenseVector.hpp  Morpheus_Ccl_Fwd_DiaMatrix.hpp  Morpheus_Ccl_Fwd_DynamicMatrix.hpp
ccl/src/host/: Morpheus_Ccl.hpp  Morpheus_Ccl_Convert.cpp  Morpheus_Ccl_Convert.hpp  Morpheus_Ccl_CooMatrix.cpp  Morpheus_Ccl_CooMatrix.hpp  Morpheus_Ccl_Copy.cpp  Morpheus_Ccl_Copy.hpp  Morpheus_Ccl_CsrMatrix.cpp  Morpheus_Ccl_CsrMatrix.hpp  Morpheus_Ccl_DenseMatrix.cpp  Morpheus_Ccl_DenseMatrix.hpp  Morpheus_Ccl_DenseVector.cpp  Morpheus_Ccl_DenseVector.hpp  Morpheus_Ccl_DiaMatrix.cpp  Morpheus_Ccl_DiaMatrix.hpp  Morpheus_Ccl_Dot.cpp  Morpheus_Ccl_Dot.hpp  Morpheus_Ccl_DynamicMatrix.cpp  Morpheus_Ccl_DynamicMatrix.hpp  Morpheus_Ccl_Host.hpp  Morpheus_Ccl_MirrorContainers.cpp  Morpheus_Ccl_MirrorContainers.hpp  Morpheus_Ccl_Multiply.cpp  Morpheus_Ccl_Multiply.hpp  Morpheus_Ccl_Print.cpp  Morpheus_Ccl_Print.hpp  Morpheus_Ccl_Reduction.cpp  Morpheus_Ccl_Reduction.hpp  Morpheus_Ccl_Scan.cpp  Morpheus_Ccl_Scan.hpp  Morpheus_Ccl_WAXPBY.cpp  Morpheus_Ccl_WAXPBY.hpp
ccl/src/host/fwd/: Morpheus_Ccl_Fwd_CooMatrix.hpp  Morpheus_Ccl_Fwd_CsrMatrix.hpp  Morpheus_Ccl_Fwd_DenseMatrix.hpp  Morpheus_Ccl_Fwd_DenseVector.hpp  Morpheus_Ccl_Fwd_DiaMatrix.hpp  Morpheus_Ccl_Fwd_DynamicMatrix.hpp
ccl/src/phost/: Morpheus_Ccl.hpp  Morpheus_Ccl_Convert.cpp  Morpheus_Ccl_Convert.hpp  Morpheus_Ccl_CooMatrix.cpp  Morpheus_Ccl_CooMatrix.hpp  Morpheus_Ccl_Copy.cpp  Morpheus_Ccl_Copy.hpp  Morpheus_Ccl_CsrMatrix.cpp  Morpheus_Ccl_CsrMatrix.hpp  Morpheus_Ccl_DenseMatrix.cpp  Morpheus_Ccl_DenseMatrix.hpp  Morpheus_Ccl_DenseVector.cpp  Morpheus_Ccl_DenseVector.hpp  Morpheus_Ccl_DiaMatrix.cpp  Morpheus_Ccl_DiaMatrix.hpp  Morpheus_Ccl_Dot.cpp  Morpheus_Ccl_Dot.hpp  Morpheus_Ccl_DynamicMatrix.cpp  Morpheus_Ccl_DynamicMatrix.hpp  Morpheus_Ccl_MirrorContainers.cpp  Morpheus_Ccl_MirrorContainers.hpp  Morpheus_Ccl_Multiply.cpp  Morpheus_Ccl_Multiply.hpp  Morpheus_Ccl_Print.cpp  Morpheus_Ccl_Print.hpp  Morpheus_Ccl_Reduction.cpp  Morpheus_Ccl_Reduction.hpp  Morpheus_Ccl_Scan.cpp  Morpheus_Ccl_Scan.hpp  Morpheus_Ccl_WAXPBY.cpp  Morpheus_Ccl_WAXPBY.hpp  Morpheus_Ccl_pHost.hpp
ccl/src/phost/fwd/: Morpheus_Ccl_Fwd_CooMatrix.hpp  Morpheus_Ccl_Fwd_CsrMatrix.hpp  Morpheus_Ccl_Fwd_DenseMatrix.hpp  Morpheus_Ccl_Fwd_DenseVector.hpp  Morpheus_Ccl_Fwd_DiaMatrix.hpp  Morpheus_Ccl_Fwd_DynamicMatrix.hpp
cmake/: MclConfig.cmake.in  fclConfig.cmake.in  kokkos_backends.cmake  mcl_backends.cmake  mcl_set_types.cmake  mcl_utils.cmake
examples/: CMakeLists.txt
examples/01_initialize/: 01_initialize.c  01_initialize.cpp  CMakeLists.txt
examples/02_coomat/: 02_coomat.cpp  CMakeLists.txt
examples/03_dynmat/: 03_dynmat.cpp  CMakeLists.txt
examples/04_c_compatibility/: 04_c_compatibility.c
examples/05_Coo_Interface/: 05_Coo_Interface.c
examples/06_Csr_Interface/: 06_Csr_Interface.c  CMakeLists.txt
examples/07_Dia_Interface/: 07_Dia_Interface.c  CMakeLists.txt
examples/08_Vec_Interface/: 08_Vec_Interface.c
examples/09_Scan/: 09_Scan.c  CMakeLists.txt
examples/10_DenseMatrix_Interface/: CMakeLists.txt
examples/11_Dynamic_Interface/: 11_Dynamic_Interface.c  CMakeLists.txt
examples/12_Convert/: CMakeLists.txt
examples/13_Mirroring/: 13_Mirroring.c  CMakeLists.txt
src/: Fcl_C.cpp  Fcl_C.hpp  Fcl_C_Convert.cpp  Fcl_C_Convert.hpp  Fcl_C_CooMatrix.cpp  Fcl_C_CooMatrix.hpp  Fcl_C_Copy.cpp  Fcl_C_Copy.hpp  Fcl_C_CsrMatrix.cpp  Fcl_C_CsrMatrix.hpp  Fcl_C_DenseMatrix.cpp  Fcl_C_DenseMatrix.hpp  Fcl_C_DenseVector.cpp  Fcl_C_DenseVector.hpp  Fcl_C_DiaMatrix.cpp  Fcl_C_DiaMatrix.hpp  Fcl_C_Dot.cpp  (+19 more)
(+28 files in other folders)
