add_subdirectory(01_initialize)
add_subdirectory(02_coomat)
add_subdirectory(03_dynmat)
add_subdirectory(04_c_compatibility)
add_subdirectory(05_Coo_Interface)
add_subdirectory(06_Csr_Interface)
add_subdirectory(07_Dia_Interface)
add_subdirectory(08_Vec_Interface)
add_subdirectory(09_Scan)
add_subdirectory(10_DenseMatrix_Interface)
